--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "todos",
+  "homepage": "https://jjgray90.github.io/todos",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "mkrc": "./node_modules/.bin/mkrc"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +37,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0",
+    "sass": "^1.54.0",
+    "mkrc-dan-test": "^0.0.1"
   }
 }
