--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-regular-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "babel-plugin-macros": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -40,7 +45,7 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0",
-    "sass": "^1.54.0",
-    "mkrc-dan-test": "^0.0.1"
+    "mkrc-dan-test": "^0.0.1",
+    "sass": "^1.54.0"
   }
 }
